# screensaver_p1

./: CMakeLists.txt  README.md  main.c
documentacion/proyectoParalelas/: docusaurus.config.js  package-lock.json  package.json
documentacion/proyectoParalelas/docs/: intro.md
documentacion/proyectoParalelas/src/components/HomepageFeatures/: index.js
documentacion/proyectoParalelas/src/pages/: index.js
src/: circle.c  circle.h  config.h  main.c  mystify_line.c  mystify_line.h  sweeping_line.c  sweeping_line.h
